	bugfix: improved IOS detection and fixed a logic error. closes ticket 232 (by jthurman)
	bugfix: user account autotags were not generated under certain conditions (reported by Jason Hamilton)
	bugfix: correctly remove tags, when deleting files
	bugfix: switchvlans failed on "%" or "~" character in port name (by Boris Lytochkin)
	bugfix: search failed, when only one RS pool was found for request
	new feature: rackspace tab is shown only if there is at least one rack
		in the system. Closes ticket 234.
0.17.1 2009-06-03
	bugfix: tags were not displayed on "File" page
	bugfix: multiline comment for an added file was stored incorrectly
	bugfix: user's displayed name was sometimes lost with LDAP auth
	bugfix: rackspace rows highlightling was broken in previous release
	bugfix: IPv4 address picker window was broken
	bugfix: string value "0" was incorrectly handled, when displaying or entering data
	bugfix: rackspace allocation history recording did not work in 0.17.0
	bugfix: boolean expressions parsing in RackCode now honours priorities
	bugfix: upgrade script could fail sometimes
	update: removed unused database index
0.17.0 2009-05-20
	new feature: file attachments (by Aaron)
	new feature: ability to delete objects (by Aaron)
	new feature: external "httpd" user authentication
	new feature: validator in RackCode editor
	new feature: vendor sieve for stickers
	new feature: RackCode expressions as source for load balancer lists
	new feature: wireless hardware in dictionary
	new feature: "racks per row" option (by Frank Brodbeck)
	new feature: LDAP cache
	update: display row name when listing objects. closes ticket 16 (by Aaron)
	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
	update: allow port type to be changed if it isn't linked.  closes ticket 137 (by Aaron)
	update: add network security chapter and dictionary entries.  closes ticket 148 (by Aaron)